--- a/ds/analyses/naive.html
+++ b/ds/analyses/naive.html
@@ -633,7 +633,8 @@ z_m \sim \mathsf{Categorical}(\theta).
         mutate(diff = diff(val)) %&gt;%
           filter(test &lt;= 5 &amp; author == 1 | test &gt; 5 &amp; author == 2) %&gt;% select(author, diff)
   
-  diffMatches &lt;- data.frame(diff %&gt;% .[c(86L, 34L, 28L, 145L, 111L, 83L, 103L, 88L, 131L, 20L),])
+  diffMatches &lt;- data.frame(diff %&gt;% .[c(29L, 66L, 44L, 70L, 150L, 13L, 115L, 138L, 117L, 134L),])
+  #diffMatches &lt;- data.frame(diff %&gt;% .[c(86L, 34L, 28L, 145L, 111L, 83L, 103L, 88L, 131L, 20L),])
   #diffMatches &lt;- data.frame(diff %&gt;% .[c(40L, 7L, 145L, 60L, 143L, 141L, 111L, 54L, 48L, 76L),])
   colnames(diffMatches) &lt;- c(&quot;naive bayes estimate&quot;)
   rownames(diffMatches) &lt;- 1:nrow(diffMatches)
@@ -643,16 +644,16 @@ z_m \sim \mathsf{Categorical}(\theta).
   gammaVals &lt;- cbind(diffMatches, as.data.frame(gammaVals))
   print(gammaVals)</code></pre>
 <pre><code>##    naive bayes estimate test author fully bayesian naive bayes estimate
-## 1            -1582.7378    1      1                            133.1498
-## 2            -1170.6945    2      1                            136.9250
-## 3              564.6022    3      1                            158.1607
-## 4            -1635.5275    4      1                            199.8253
-## 5            -1835.3004    5      1                            193.7320
-## 6              299.4430    6      2                          -1994.6632
-## 7              321.8482    7      2                           -695.2079
-## 8              304.2177    8      2                           -696.3224
-## 9              274.5209    9      2                           -724.4402
-## 10            -573.3988   10      2                           -984.5822</code></pre>
+## 1              561.5537    1      1                            133.1498
+## 2              269.4367    2      1                            136.9250
+## 3              285.1618    3      1                            158.1607
+## 4              302.1919    4      1                            199.8253
+## 5              278.7444    5      1                            193.7320
+## 6            -1516.5821    6      2                          -1994.6632
+## 7            -1266.5146    7      2                           -695.2079
+## 8             -300.1199    8      2                           -696.3224
+## 9            -1201.4260    9      2                           -724.4402
+## 10           -1083.0261   10      2                           -984.5822</code></pre>
 <p>Last, we spot check the chains, which we know are failing us. We see a lot of noise in the parameter estimate for theta <span class="math inline">\(\theta\)</span>, our probability a text sample is from either author (note: the probabilities are so different because Yau’s posts are much shorter!)</p>
 <pre class="r"><code>  posterior2 &lt;- extract(fit2, inc_warmup = TRUE, permuted = FALSE)
 
