--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</header>
 		<main>
 			<article>
-				<p>👋 I am a data scientist for WarnerMedia at CNN. In my past life, I was an editor at CNN Politics and NBC News. </p><p>These days, I mostly focus on Python and PyTorch, but below you can see some interactive explorables, packages and articles I made.</p>
+				<p>👋 I am a machine learning engineer working for Columbia University\'s Brown Institute. I was previously a data scientist at WarnerMedia and a politics editor at CNN and NBC News. Find some of my explorables below.</p>
 			</article>
 			<section id="DS">
 				<h2>Data science explorables</h2>
