--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 		</header>
 		<main>
 			<article>
-				<p>👋 I am a machine learning engineer working for Columbia University\'s Brown Institute. I was previously a data scientist at WarnerMedia and a politics editor at CNN and NBC News. Find some of my explorables below.</p>
+				<p>👋 I am a machine learning engineer working for The Brown Institute at Columbia University. Previously, I was a data scientist at WarnerMedia and a politics editor at CNN and NBC News.</p>
+				<p>Find some of my explorables below.</p>
 			</article>
 			<section id="DS">
 				<h2>Data science explorables</h2>
