--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<main>
 			<article>
 				<p>👋 I am a machine learning engineer working for The Brown Institute at Columbia University. Previously, I was a data scientist at WarnerMedia and a politics editor at CNN and NBC News.</p>
-				<p>Find some of my explorables below.</p>
+				<p>Find some of my projects and writing below.</p>
 			</article>
 			<section id="DS">
 				<h2>Data science explorables</h2>
