--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<h1>Sam Petulla</h1>
 			</div>
 			<div class="job-title">
-				<h2>Data scientist</h2>
+				<h2>Machine learning</h2>
 			</div>
 		</header>
 		<main>
