--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
 						<a href="https://www.cnn.com/election/2018/forecast/house"><img src="img/cnnforecast.png" /></a>
 					</figure>
 					<h3 class="graphics-title">
-						<a href="http://www.msnbc.com/interactives/geography-of-poverty/index.html">Geography of Poverty (through nw chapter)</a>
+						<a href="https://web.archive.org/web/20170601000000*/https://www.msnbc.com/interactives/geography-of-poverty/index.html">Geography of Poverty (through nw chapter)</a>
 					</h3>
 					<figure class="graphics-img">
-						<a href="http://www.msnbc.com/interactives/geography-of-poverty/index.html"><img src="img/geopovertyintro.png" /></a>
+						<a href="https://web.archive.org/web/20170601000000*/https://www.msnbc.com/interactives/geography-of-poverty/index.html"><img src="img/geopovertyintro.png" /></a>
 					</figure>
 					<h3 class="graphics-title">
 						<a href="https://www.nbcnews.com/specials/donald-trump-republican-party">United States of Trump</a>
