--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</header>
 		<main>
 			<article>
-				<p>👋 I am a machine learning engineer working for The Brown Institute at Columbia University. Previously, I was a data scientist at WarnerMedia and a politics editor at CNN and NBC News.</p>
+				<p>👋 I am a machine learning engineer working for The Brown Institute at Columbia University. Previously, I was a data scientist at WarnerMedia and a politics editor and engineer at CNN and NBC News.</p>
 				<p>Find some of my projects and writing below.</p>
 			</article>
 			<section id="DS">
