--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 				<h1>Sam Petulla</h1>
 			</div>
 			<div class="job-title">
-				<h2>Data science and machine learning</h2>
+				<h2>Data scientist</h2>
 			</div>
 		</header>
 		<main>
 			<article>
-				<p>👋 I am a data scientist working for The Brown Institute at Columbia University. Previously, I was a data scientist at WarnerMedia and a politics editor and engineer at CNN and NBC News.</p>
+				<p>👋 I am a data scientist working for The Brown Institute at Columbia University. Previously, I was a data scientist at WarnerMedia and an editor and engineer at CNN and NBC News.</p>
 				<p>Find some of my projects and writing below.</p>
 			</article>
 			<section id="DS">
