--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</header>
 		<main>
 			<article>
-				<p>👋 I am a data scientist at Google. I previously worked at the Brown Institute at Colubia University as a data scientist consulting for local news organizations.</p> 
+				<p>👋 I am a data scientist at Google. I previously worked at the Brown Institute at Columbia University as a data scientist consulting for local news organizations.</p> 
 				<p>Prior to that, I was a data scientist at WarnerMedia and a data journalist at CNN and NBC News.</p>
 			</article>
 
